# crypto-bnb

./: .gitignore  .gitmodules  README.md  build-extension.ts  bun.lockb  generate-icons-from-miner.js  package.json  tsconfig.json
backend/: .env.sample  README.md  pyproject.toml
backend/src/: app.py
evm/: README.md  bun.lockb  package.json  remappings.txt
evm/cache/: solidity-files-cache.json
evm/script/: DeployCounter.s.sol  DeployCryptoBnB.s.sol  DeployPayperPlane.s.sol  Fund.s.sol
evm/src/: Counter.sol  CryptoBnB.sol  PayperPlane.sol  VirtualCardRequest.sol
evm/test/: Counter.t.sol  CryptoBnB.t.sol  PayperPlane.t.sol
evm/test/mocks/: MockERC20.sol
extension/: README.md  manifest.json
extension/background/: background.ts
extension/content/: content.css  content.js  content.ts
extension/inject/: wallet-connector.js
extension/offscreen/: offscreen.html  offscreen.ts
extension/popup/: popup-simple.tsx  popup.css  popup.html
home/: README.md  index.html  script.js  styles.css
payperplane-react/: README.md  bun.lockb  clean-css.js  index.html  package-lock.json  package.json  vite.config.js
payperplane-react/public/: example.js  modal-handler-v2.js  solution-modals.js
payperplane-react/public/components/: awards.html  best-suited.html  footer.html  header.html  hero.html  solutions.html  stats.html
payperplane-react/public/files/: app.css  demo-video-placeholder.html  header-overrides.css  main-new-page.css
payperplane-react/src/: App.jsx
payperplane-react/src/components/: index.js
shared/: types.ts
(+9 files in other folders)
