[project]
name = "payperplane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "lithic>=0.107.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.25",
    "stripe>=13.0.0",
    "web3>=7.13.0",
]
